Create gesture begin/end events for scroll wheel events.

When building against a 10.11+ SDK, and running on 10.11+, begin and end gesture
events are no longer sent. We need to manually trigger the corresponding logic
within Chrome.

Bug: 754649
Change-Id: I6a5056997ee308bcdf8168741d2fcf69a6af3d79
Reviewed-on: https://chromium-review.googlesource.com/616074
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494656}
Former-commit-id: 1baa30bc4249c61e4f08907fcfdf09ba2a7a8a99